attempting to fix huge code font size on mobile
Former-commit-id: 06d02662e5a935d88ee1a882e534632696f217ad
Former-commit-id: 287b24aa996712851f7499e1b501fd80cfff8f58

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -1,5 +1,9 @@
 // Custom style
 
+body {
+    margin: 0;
+}
+
 // styling for all SVGs
 svg {
     fill: currentcolor;
