--- a/themes/LoveIt/assets/css/_variables.scss
+++ b/themes/LoveIt/assets/css/_variables.scss
@@ -119,7 +119,7 @@ $pagination-link-hover-color-dark: $global-link-color-dark !default;
 // ========== Code ========== //
 // Font family and size of the code
 $code-font-family: menlo, monaco, consolas, "Liberation Mono", "Courier New", monospace !default;
-$code-font-size: .9rem !default;
+$code-font-size: 0.9em !default;
 
 // Color of the code
 // $code-color: $global-font-color !default;
@@ -269,4 +269,3 @@ $code-highlight-color-map-dark: (
 ) !default;
 
 // ========== Code ========== //
-
